K8S/rabbitmq-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-depl
  labels:
    app: rabbitmq-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      name: rabbitmq
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 15672
              name: rbmq-mgmt-port
              protocol: TCP
            - containerPort: 5672
              name: rbmq-msg-port
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - port: 15672
      name: rbmq-mgmt-port
      protocol: TCP
      targetPort: 15672
    - port: 5672
      name: rbmq-msg-port
      protocol: TCP
      targetPort: 5672

---
- apiVersion: v1
  kind: Service
  metadata:
    name: rabbitmq-loadbalancer
  spec:
    type: LoadBalancer
    selector:
      app: rabbitmq
    ports:
      - port: 15672
        name: rbmq-mgmt-port
        protocol: TCP
        targetPort: 15672
      - port: 5672
        name: rbmq-msg-port
        protocol: TCP
        targetPort: 5672
